--- a/src/lib/i18n/locales/ko.json
+++ b/src/lib/i18n/locales/ko.json
@@ -8,5 +8,7 @@
   "hashing": "해싱",
   "compression": "압축",
   "keygen": "키생성",
-  "home": "홈"
+  "home": "홈",
+  "page.title.home": "텍스트 위자드 - 무료 온라인 도구 - 암/복호화, 인코딩/디코딩, 해싱, 키생성",
+  "page.description.home": "텍스트 위자드는 암/복호화, 인코딩/디코딩, 해싱, 키생성 등 무료 온라인 도구를 제공합니다."
 }
