--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -10,5 +10,23 @@
   "keygen": "KeyGen",
   "home": "Home",
   "page.title.home": "TxtWizard | Free Online Tools - Encryption, Hashing, Compression, Ethereum Key Generation",
-  "page.description.home": "TxtWizard offers free online tools for text encryption, decryption, hashing, compression, Ethereum key generation, and more."
+  "page.description.home": "TxtWizard offers free online tools for text encryption, decryption, hashing, compression, Ethereum key generation, and more.",
+  "welcome-to-txtwizard": "Welcome to TxtWizard!",
+  "txtwizard-intro": "TxtWizard is your go-to platform for free, powerful, and secure online tools. Everything runs entirely within your browser. Explore our features below:",
+  "our-tools": "Our Tools",
+  "tool": "Tool",
+  "decoding": "Decoding",
+  "encryption-intro": "Easily encrypt sensitive data using AES-GCM or AES-CBC.",
+  "decryption-intro": "Decrypt AES-encrypted data back to its original form. Supports AES-GCM and AES-CBC.",
+  "hashing-intro": "Create cryptographic hashes like MD5, SHA1, SHA256, and more. Generate secure hashes for data integrity verification.",
+  "compression-intro": "Compress text using Gzip, Bzip2, and Deflate. Measure compression ratio and easily obtain compressed results.",
+  "keygen-intro": "Generate Bitcoin and Ethereum public and private key pairs with a secure local process, right in your browser.",
+  "encoding-intro": "Convert plain text between Base64, Hex, URL, and HTML encoding formats.",
+  "bitcoin": "Bitcoin",
+  "ethereum": "Ethereum",
+  "generate": "Generate",
+  "encrypt-button": "ENCRYPT",
+  "decrypt-button": "DECRYPT",
+  "hash-button": "Hash",
+  "compress-button": "Compress"
 }
