Refactor layout and page components to add QR code generator feature

--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -28,5 +28,7 @@
   "encrypt-button": "ENCRYPT",
   "decrypt-button": "DECRYPT",
   "hash-button": "Hash",
-  "compress-button": "Compress"
+  "compress-button": "Compress",
+  "qr-code-gen": "QR code generation",
+  "qr-code-intro": "A QR code (Quick Response code) is a type of matrix barcode that can encode information such as text, URLs, or other data. It's widely used for contactless payment systems, website links, and more."
 }
