--- a/src/lib/i18n/locales/ko.json
+++ b/src/lib/i18n/locales/ko.json
@@ -28,5 +28,7 @@
   "encrypt-button": "암호화 하기",
   "decrypt-button": "복호화 하기",
   "hash-button": "해시 하기",
-  "compress-button": "압축하기"
+  "compress-button": "압축하기",
+  "qr-code-intro": "QR 코드(빠른 응답 코드)는 텍스트, URL 또는 기타 데이터와 같은 정보를 인코딩할 수 있는 매트릭스 바코드 유형입니다. \n비접촉 결제 시스템, 웹사이트 링크 등에 널리 사용됩니다.",
+  "qr-code-gen": "QR 코드 생성"
 }
