Feat: Add Key Generation to Navigation

--- a/src/lib/i18n/locales/it.json
+++ b/src/lib/i18n/locales/it.json
@@ -1,37 +1,53 @@
 {
-    "page_title": "Titolo della pagina",
-    "sign_in": "Accedi",
-    "sign_up": "Registrati",
-    "encryption": "Crittografia",
-    "decryption": "Decrittografia",
-    "encoding": "Codifica",
-    "hashing": "Hashing",
-    "compression": "Compressione",
-    "keygen": "Generazione Chiavi",
-    "home": "Home",
-    "page.title.home": "TxtWizard - Strumenti online gratuiti - Crittografia, Hashing, Compressione, Generazione chiavi Ethereum",
-    "page.description.home": "TxtWizard offre strumenti online gratuiti per crittografia, decrittografia, hashing, compressione, generazione chiavi Ethereum e altro ancora.",
-    "welcome-to-txtwizard": "Benvenuto su TxtWizard!",
-    "txtwizard-intro": "TxtWizard è la tua piattaforma per potenti strumenti online sicuri, eseguiti completamente nel tuo browser. Esplora le nostre funzionalità:",
-    "our-tools": "I nostri strumenti",
-    "tool": "Strumento",
-    "decoding": "Decodifica",
-    "encryption-intro": "Cripta facilmente i dati sensibili utilizzando AES-GCM o AES-CBC.",
-    "decryption-intro": "Decripta i dati crittografati con AES nel loro formato originale. Supporta AES-GCM e AES-CBC.",
-    "hashing-intro": "Crea hash crittografici come MD5, SHA1, SHA256 e altro.",
-    "compression-intro": "Comprimi testo usando Gzip, Bzip2 e Deflate.",
-    "keygen-intro": "Genera coppie di chiavi pubbliche e private di Bitcoin e Ethereum direttamente nel tuo browser.",
-    "encoding-intro": "Converti testo tra formati di codifica come Base64, Hex, URL e HTML.",
-    "bitcoin": "Bitcoin",
-    "ethereum": "Ethereum",
-    "generate": "Genera",
-    "encrypt-button": "CRITTOGRAFA",
-    "decrypt-button": "DECRITTOGRAFA",
-    "hash-button": "Hash",
-    "compress-button": "Comprimi",
-    "qr-code-gen": "Generazione QR Code",
-    "qr-code-intro": "Un codice QR può codificare informazioni come testo, URL o altri dati ed è ampiamente utilizzato per pagamenti senza contatto, link a siti web, ecc.",
-    "currency": "Conversione valuta",
-    "currency-intro": "Conversioni di valuta utilizzando informazioni aggiornate sui tassi di cambio."
+  "page_title": "Titolo della pagina",
+  "sign_in": "Accedi",
+  "sign_up": "Registrati",
+  "encryption": "Crittografia",
+  "decryption": "Decrittografia",
+  "encoding": "Codifica",
+  "hashing": "Hashing",
+  "compression": "Compressione",
+  "keygen": "Generazione Chiavi",
+  "home": "Home",
+  "page.title.home": "TxtWizard - Strumenti online gratuiti - Crittografia, Hashing, Compressione, Generazione chiavi Ethereum",
+  "page.description.home": "TxtWizard offre strumenti online gratuiti per crittografia, decrittografia, hashing, compressione, generazione chiavi Ethereum e altro ancora.",
+  "welcome-to-txtwizard": "Benvenuto su TxtWizard!",
+  "txtwizard-intro": "TxtWizard è la tua piattaforma per potenti strumenti online sicuri, eseguiti completamente nel tuo browser. Esplora le nostre funzionalità:",
+  "our-tools": "I nostri strumenti",
+  "tool": "Strumento",
+  "decoding": "Decodifica",
+  "encryption-intro": "Cripta facilmente i dati sensibili utilizzando AES-GCM o AES-CBC.",
+  "decryption-intro": "Decripta i dati crittografati AES nel loro formato originale",
+  "hashing-intro": "Genera hash crittografici come MD5, SHA1, SHA256, ecc.",
+  "compression-intro": "Comprimi il testo usando Gzip, Bzip2, Deflate.",
+  "keygen-intro": "Genera coppie di chiavi Bitcoin ed Ethereum direttamente nel tuo browser.",
+  "encoding-intro": "Converti tra formati di codifica Base64, Hex, URL e HTML.",
+  "qr-code-gen": "Generatore di codici QR",
+  "currency": "Convertitore di valuta",
+  "pig_latin": {
+    "link_text": "Traduttore Pig Latin",
+    "page_title": "Traduttore Pig Latin",
+    "input_label": "Inserisci il testo da tradurre",
+    "output_label": "Pig Latin",
+    "tool_title": "Traduttore Pig Latin"
+  },
+  "markdown_preview": {
+    "link_text": "Anteprima Markdown",
+    "page_title": "Anteprima Markdown",
+    "page_description": "Visualizza in anteprima il tuo testo Markdown in tempo reale.",
+    "tool_title": "Anteprima Markdown",
+    "input_label": "Inserisci qui il tuo testo Markdown"
+  },
+  "text_statistics": {
+    "link_text": "Statistiche testo",
+    "page_title": "Statistiche testo",
+    "page_description": "Ottieni statistiche sul tuo testo.",
+    "tool_title": "Statistiche testo",
+    "input_label": "Inserisci qui il tuo testo",
+    "character_count": "Conteggio caratteri",
+    "word_count": "Conteggio parole",
+    "sentence_count": "Conteggio frasi",
+    "reading_time": "Tempo di lettura (circa)",
+    "tool": "Strumento"
   }
-  
+}
