--- a/src/lib/i18n/locales/de.json
+++ b/src/lib/i18n/locales/de.json
@@ -1,37 +1,53 @@
 {
-    "page_title": "Seitentitel",
-    "sign_in": "Anmelden",
-    "sign_up": "Registrieren",
-    "encryption": "Verschlüsselung",
-    "decryption": "Entschlüsselung",
-    "encoding": "Kodierung",
-    "hashing": "Hashing",
-    "compression": "Kompression",
-    "keygen": "Schlüsselgenerierung",
-    "home": "Startseite",
-    "page.title.home": "TxtWizard - Kostenlose Online-Tools - Verschlüsselung, Hashing, Kompression, Ethereum Schlüsselgenerierung",
-    "page.description.home": "TxtWizard bietet kostenlose Online-Tools für Textverschlüsselung, Entschlüsselung, Hashing, Kompression, Ethereum Schlüsselgenerierung und mehr.",
-    "welcome-to-txtwizard": "Willkommen bei TxtWizard!",
-    "txtwizard-intro": "TxtWizard ist eine Plattform für leistungsstarke und sichere Online-Tools, die vollständig in Ihrem Browser ausgeführt werden. Entdecken Sie unsere Funktionen:",
-    "our-tools": "Unsere Werkzeuge",
-    "tool": "Werkzeug",
-    "decoding": "Dekodierung",
-    "encryption-intro": "Verschlüsseln Sie sensible Daten einfach mit AES-GCM oder AES-CBC.",
-    "decryption-intro": "Entschlüsseln Sie AES-verschlüsselte Daten zurück in ihr ursprüngliches Format. Unterstützt AES-GCM und AES-CBC.",
-    "hashing-intro": "Erstellen Sie kryptografische Hashes wie MD5, SHA1, SHA256 und mehr.",
-    "compression-intro": "Komprimieren Sie Text mit Gzip, Bzip2 und Deflate.",
-    "keygen-intro": "Generieren Sie Bitcoin- und Ethereum-Schlüsselpaare direkt in Ihrem Browser.",
-    "encoding-intro": "Konvertieren Sie Text zwischen Base64, Hex, URL und HTML Kodierungsformaten.",
-    "bitcoin": "Bitcoin",
-    "ethereum": "Ethereum",
-    "generate": "Generieren",
-    "encrypt-button": "Verschlüsseln",
-    "decrypt-button": "Entschlüsseln",
-    "hash-button": "Hashen",
-    "compress-button": "Komprimieren",
-    "qr-code-gen": "QR-Code-Generierung",
-    "qr-code-intro": "Ein QR-Code kann Text, URLs oder andere Daten codieren und wird häufig für kontaktloses Bezahlen und Webseitenlinks verwendet.",
-    "currency": "Währungsumrechnung",
-    "currency-intro": "Währungsumrechnungen mit Echtzeit-Wechselkursinformationen."
+  "page_title": "Seitentitel",
+  "sign_in": "Anmelden",
+  "sign_up": "Registrieren",
+  "encryption": "Verschlüsselung",
+  "decryption": "Entschlüsselung",
+  "encoding": "Kodierung",
+  "hashing": "Hashing",
+  "compression": "Kompression",
+  "keygen": "Schlüsselgenerierung",
+  "home": "Startseite",
+  "page.title.home": "TxtWizard - Kostenlose Online-Tools - Verschlüsselung, Hashing, Kompression, Ethereum Schlüsselgenerierung",
+  "page.description.home": "TxtWizard bietet kostenlose Online-Tools für Textverschlüsselung, Entschlüsselung, Hashing, Kompression, Ethereum Schlüsselgenerierung und mehr.",
+  "welcome-to-txtwizard": "Willkommen bei TxtWizard!",
+  "txtwizard-intro": "TxtWizard ist eine Plattform für leistungsstarke und sichere Online-Tools, die vollständig in Ihrem Browser ausgeführt werden. Entdecken Sie unsere Funktionen:",
+  "our-tools": "Unsere Werkzeuge",
+  "tool": "Werkzeug",
+  "decoding": "Dekodierung",
+  "encryption-intro": "Verschlüsseln Sie vertrauliche Daten einfach m",
+  "decryption-intro": "Entschlüsseln Sie AES-verschlüsselte Daten wieder in ihr Original",
+  "hashing-intro": "Erstellen Sie kryptografische Hashes wie MD5, SHA1, SHA256 usw.",
+  "compression-intro": "Komprimieren Sie Text mit Gzip, Bzip2, Deflate.",
+  "keygen-intro": "Generieren Sie Bitcoin- und Ethereum-Schlüsselpaare direkt in Ihrem Browser.",
+  "encoding-intro": "Konvertieren Sie zwischen Base64-, Hex-, URL- und HTML-Codierungsformaten.",
+  "qr-code-gen": "QR-Code-Generator",
+  "currency": "Währungsrechner",
+  "pig_latin": {
+    "link_text": "Pig Latin Übersetzer",
+    "page_title": "Pig Latin Übersetzer",
+    "input_label": "Geben Sie Text zum Übersetzen ein",
+    "output_label": "Pig Latin",
+    "tool_title": "Pig Latin Übersetzer"
+  },
+  "markdown_preview": {
+    "link_text": "Markdown-Vorschau",
+    "page_title": "Markdown-Vorschau",
+    "page_description": "Zeigen Sie Ihren Markdown-Text in Echtzeit an.",
+    "tool_title": "Markdown-Vorschau",
+    "input_label": "Geben Sie hier Ihren Markdown-Text ein"
+  },
+  "text_statistics": {
+    "link_text": "Textstatistiken",
+    "page_title": "Textstatistiken",
+    "page_description": "Erhalten Sie Statistiken zu Ihrem Text.",
+    "tool_title": "Textstatistiken",
+    "input_label": "Geben Sie hier Ihren Text ein",
+    "character_count": "Zeichenanzahl",
+    "word_count": "Wortanzahl",
+    "sentence_count": "Satzanzahl",
+    "reading_time": "Lesezeit (ca.)",
+    "tool": "Werkzeug"
   }
-  
+}
