--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -17,20 +17,37 @@
   "tool": "Tool",
   "decoding": "Decoding",
   "encryption-intro": "Easily encrypt sensitive data using AES-GCM or AES-CBC.",
-  "decryption-intro": "Decrypt AES-encrypted data back to its original form. Supports AES-GCM and AES-CBC.",
-  "hashing-intro": "Create cryptographic hashes like MD5, SHA1, SHA256, and more. Generate secure hashes for data integrity verification.",
-  "compression-intro": "Compress text using Gzip, Bzip2, and Deflate. Measure compression ratio and easily obtain compressed results.",
-  "keygen-intro": "Generate Bitcoin and Ethereum public and private key pairs with a secure local process, right in your browser.",
-  "encoding-intro": "Convert plain text between Base64, Hex, URL, and HTML encoding formats.",
-  "bitcoin": "Bitcoin",
-  "ethereum": "Ethereum",
-  "generate": "Generate",
-  "encrypt-button": "ENCRYPT",
-  "decrypt-button": "DECRYPT",
-  "hash-button": "Hash",
-  "compress-button": "Compress",
-  "qr-code-gen": "QR code generation",
-  "qr-code-intro": "A QR code (Quick Response code) is a type of matrix barcode that can encode information such as text, URLs, or other data. It's widely used for contactless payment systems, website links, and more.",
-  "currency": "Currency Conversion",
-  "currency-intro": "Currency to currency conversions using real-time, up-to-date exchange rate information."
+  "decryption-intro": "Decrypt AES-encrypted data back to its original",
+  "hashing-intro": "Generate cryptographic hashes like MD5, SHA1, SHA256, etc.",
+  "compression-intro": "Compress text using Gzip, Bzip2, Deflate.",
+  "keygen-intro": "Generate Bitcoin and Ethereum key pairs directly in your browser.",
+  "encoding-intro": "Convert between Base64, Hex, URL, and HTML encoding formats.",
+  "qr-code-gen": "QR Code Generator",
+  "currency": "Currency Converter",
+  "pig_latin": {
+    "link_text": "Pig Latin Translator",
+    "page_title": "Pig Latin Translator",
+    "input_label": "Enter text to translate",
+    "output_label": "Pig Latin",
+    "tool_title": "Pig Latin Translator"
+  },
+  "markdown_preview": {
+    "link_text": "Markdown Preview",
+    "page_title": "Markdown Preview",
+    "page_description": "Preview your markdown text in real time.",
+    "tool_title": "Markdown Preview",
+    "input_label": "Enter your Markdown text here"
+  },
+  "text_statistics": {
+    "link_text": "Text Statistics",
+    "page_title": "Text Statistics",
+    "page_description": "Get statistics about your text.",
+    "tool_title": "Text Statistics",
+    "input_label": "Enter your text here",
+    "character_count": "Character Count",
+    "word_count": "Word Count",
+    "sentence_count": "Sentence Count",
+    "reading_time": "Reading Time (approx.)",
+    "tool": "Tool"
+  }
 }
