--- a/src/lib/i18n/locales/fr.json
+++ b/src/lib/i18n/locales/fr.json
@@ -1,37 +1,53 @@
 {
-    "page_title": "Titre de la page",
-    "sign_in": "Se connecter",
-    "sign_up": "S'inscrire",
-    "encryption": "Chiffrement",
-    "decryption": "Déchiffrement",
-    "encoding": "Encodage",
-    "hashing": "Hachage",
-    "compression": "Compression",
-    "keygen": "Génération de clé",
-    "home": "Accueil",
-    "page.title.home": "TxtWizard - Outils en ligne gratuits - Chiffrement, Hachage, Compression, Génération de clé Ethereum",
-    "page.description.home": "TxtWizard propose des outils en ligne gratuits pour le chiffrement, le déchiffrement, le hachage, la compression, la génération de clé Ethereum et plus.",
-    "welcome-to-txtwizard": "Bienvenue sur TxtWizard !",
-    "txtwizard-intro": "TxtWizard est une plateforme d'outils en ligne puissants et sécurisés, exécutés entièrement dans votre navigateur. Découvrez nos fonctionnalités ci-dessous :",
-    "our-tools": "Nos outils",
-    "tool": "Outil",
-    "decoding": "Décodage",
-    "encryption-intro": "Chiffrez facilement des données sensibles avec AES-GCM ou AES-CBC.",
-    "decryption-intro": "Déchiffrez les données cryptées en AES pour les restaurer dans leur format d'origine. Prend en charge AES-GCM et AES-CBC.",
-    "hashing-intro": "Créez des hachages cryptographiques comme MD5, SHA1, SHA256, pour la vérification de l'intégrité des données.",
-    "compression-intro": "Compressez du texte avec Gzip, Bzip2 et Deflate.",
-    "keygen-intro": "Générez des paires de clés Bitcoin et Ethereum directement dans votre navigateur.",
-    "encoding-intro": "Convertissez du texte entre les formats d'encodage Base64, Hex, URL et HTML.",
-    "bitcoin": "Bitcoin",
-    "ethereum": "Ethereum",
-    "generate": "Générer",
-    "encrypt-button": "Chiffrer",
-    "decrypt-button": "Déchiffrer",
-    "hash-button": "Hacher",
-    "compress-button": "Compresser",
-    "qr-code-gen": "Génération de code QR",
-    "qr-code-intro": "Un code QR peut encoder des informations comme du texte, des URLs, etc.",
-    "currency": "Conversion de devises",
-    "currency-intro": "Conversions de devises en utilisant des taux de change en temps réel."
+  "page_title": "Titre de la page",
+  "sign_in": "Se connecter",
+  "sign_up": "S'inscrire",
+  "encryption": "Chiffrement",
+  "decryption": "Déchiffrement",
+  "encoding": "Encodage",
+  "hashing": "Hachage",
+  "compression": "Compression",
+  "keygen": "Génération de clé",
+  "home": "Accueil",
+  "page.title.home": "TxtWizard - Outils en ligne gratuits - Chiffrement, Hachage, Compression, Génération de clé Ethereum",
+  "page.description.home": "TxtWizard propose des outils en ligne gratuits pour le chiffrement, le déchiffrement, le hachage, la compression, la génération de clé Ethereum et plus.",
+  "welcome-to-txtwizard": "Bienvenue sur TxtWizard !",
+  "txtwizard-intro": "TxtWizard est une plateforme d'outils en ligne puissants et sécurisés, exécutés entièrement dans votre navigateur. Découvrez nos fonctionnalités ci-dessous :",
+  "our-tools": "Nos outils",
+  "tool": "Outil",
+  "decoding": "Décodage",
+  "encryption-intro": "Chiffrez facilement les données sensibles à l'aide d'AES-GCM ou ",
+  "decryption-intro": "Déchiffrez les données chiffrées AES dans leur format d'origine",
+  "hashing-intro": "Générez des hachages cryptographiques tels que MD5, SHA1, SHA256, etc.",
+  "compression-intro": "Compressez le texte en utilisant Gzip, Bzip2, Deflate.",
+  "keygen-intro": "Générez des paires de clés Bitcoin et Ethereum directement dans votre navigateur.",
+  "encoding-intro": "Convertissez entre les formats d'encodage Base64, Hex, URL et HTML.",
+  "qr-code-gen": "Générateur de code QR",
+  "currency": "Convertisseur de devises",
+  "pig_latin": {
+    "link_text": "Traducteur Pig Latin",
+    "page_title": "Traducteur Pig Latin",
+    "input_label": "Entrez le texte à traduire",
+    "output_label": "Pig Latin",
+    "tool_title": "Traducteur Pig Latin"
+  },
+  "markdown_preview": {
+    "link_text": "Aperçu Markdown",
+    "page_title": "Aperçu Markdown",
+    "page_description": "Prévisualisez votre texte Markdown en temps réel.",
+    "tool_title": "Aperçu Markdown",
+    "input_label": "Entrez votre texte Markdown ici"
+  },
+  "text_statistics": {
+    "link_text": "Statistiques de texte",
+    "page_title": "Statistiques de texte",
+    "page_description": "Obtenez des statistiques sur votre texte.",
+    "tool_title": "Statistiques de texte",
+    "input_label": "Entrez votre texte ici",
+    "character_count": "Nombre de caractères",
+    "word_count": "Nombre de mots",
+    "sentence_count": "Nombre de phrases",
+    "reading_time": "Temps de lecture (approx.)",
+    "tool": "Outil"
   }
-  
+}
