--- a/src/lib/i18n/locales/hi.json
+++ b/src/lib/i18n/locales/hi.json
@@ -1,37 +1,53 @@
 {
-    "page_title": "पृष्ठ शीर्षक",
-    "sign_in": "साइन इन करें",
-    "sign_up": "साइन अप करें",
-    "encryption": "एन्क्रिप्शन",
-    "decryption": "डीक्रिप्शन",
-    "encoding": "एन्कोडिंग",
-    "hashing": "हैशिंग",
-    "compression": "संपीड़न",
-    "keygen": "कुंजी जनरेशन",
-    "home": "होम",
-    "page.title.home": "TxtWizard - मुफ्त ऑनलाइन उपकरण - एन्क्रिप्शन, हैशिंग, संपीड़न, एथेरियम कुंजी जनरेशन",
-    "page.description.home": "TxtWizard मुफ्त ऑनलाइन उपकरण प्रदान करता है जैसे कि टेक्स्ट एन्क्रिप्शन, डीक्रिप्शन, हैशिंग, संपीड़न, और एथेरियम कुंजी जनरेशन।",
-    "welcome-to-txtwizard": "TxtWizard में आपका स्वागत है!",
-    "txtwizard-intro": "TxtWizard आपके ब्राउज़र में शक्तिशाली और सुरक्षित ऑनलाइन उपकरणों का एक मंच है। हमारे फीचर्स की जाँच करें:",
-    "our-tools": "हमारे उपकरण",
-    "tool": "उपकरण",
-    "decoding": "डीकोडिंग",
-    "encryption-intro": "AES-GCM या AES-CBC का उपयोग करके संवेदनशील डेटा को आसानी से एन्क्रिप्ट करें।",
-    "decryption-intro": "AES-एन्क्रिप्टेड डेटा को मूल स्वरूप में डीक्रिप्ट करें। AES-GCM और AES-CBC को सपोर्ट करता है।",
-    "hashing-intro": "MD5, SHA1, SHA256 जैसे एन्क्रिप्टेड हैश बनाएँ।",
-    "compression-intro": "Gzip, Bzip2, Deflate का उपयोग करके टेक्स्ट को संपीड़ित करें।",
-    "keygen-intro": "बिटकॉइन और एथेरियम की सार्वजनिक और निजी कुंजी जोड़े बनाएं।",
-    "encoding-intro": "Base64, Hex, URL और HTML एन्कोडिंग फॉर्मेट में बदलें।",
-    "bitcoin": "बिटकॉइन",
-    "ethereum": "एथेरियम",
-    "generate": "जनरेट करें",
-    "encrypt-button": "एन्क्रिप्ट करें",
-    "decrypt-button": "डीक्रिप्ट करें",
-    "hash-button": "हैश करें",
-    "compress-button": "संपीड़ित करें",
-    "qr-code-gen": "क्यूआर कोड जेनरेशन",
-    "qr-code-intro": "क्यूआर कोड में टेक्स्ट, URL या अन्य डेटा एन्कोड किया जा सकता है।",
-    "currency": "मुद्रा विनिमय",
-    "currency-intro": "वास्तविक समय की विनिमय दरों का उपयोग कर मुद्रा परिवर्तनों की गणना करें।"
+  "page_title": "पृष्ठ शीर्षक",
+  "sign_in": "साइन इन करें",
+  "sign_up": "साइन अप करें",
+  "encryption": "एन्क्रिप्शन",
+  "decryption": "डीक्रिप्शन",
+  "encoding": "एन्कोडिंग",
+  "hashing": "हैशिंग",
+  "compression": "संपीड़न",
+  "keygen": "कुंजी जनरेशन",
+  "home": "होम",
+  "page.title.home": "TxtWizard - मुफ्त ऑनलाइन उपकरण - एन्क्रिप्शन, हैशिंग, संपीड़न, एथेरियम कुंजी जनरेशन",
+  "page.description.home": "TxtWizard मुफ्त ऑनलाइन उपकरण प्रदान करता है जैसे कि टेक्स्ट एन्क्रिप्शन, डीक्रिप्शन, हैशिंग, संपीड़न, और एथेरियम कुंजी जनरेशन।",
+  "welcome-to-txtwizard": "TxtWizard में आपका स्वागत है!",
+  "txtwizard-intro": "TxtWizard आपके ब्राउज़र में शक्तिशाली और सुरक्षित ऑनलाइन उपकरणों का एक मंच है। हमारे फीचर्स की जाँच करें:",
+  "our-tools": "हमारे उपकरण",
+  "tool": "उपकरण",
+  "decoding": "डीकोडिंग",
+  "encryption-intro": "AES-GCM या AES-CBC का उपयोग करके संवेदनशील डेटा को आसानी से एन्क्रिप्ट करें।",
+  "decryption-intro": "AES-एन्क्रिप्टेड डेटा को उसके मूल प्रारूप में डिक्रिप्ट करें। AES-GCM ",
+  "hashing-intro": "MD5, SHA1, SHA256 जैसे क्रिप्टोग्राफ़िक हैश उत्पन्न करें।",
+  "compression-intro": "Gzip, Bzip2, Deflate का उपयोग करके टेक्स्ट को कंप्रेस करें।",
+  "keygen-intro": "अपने ब्राउज़र में सीधे बिटकॉइन और एथेरियम कुंजी जोड़े जनरेट करें।",
+  "encoding-intro": "Base64, Hex, URL, और HTML एन्कोडिंग स्वरूपों के बीच रूपांतरण करें।",
+  "qr-code-gen": "QR कोड जनरेटर",
+  "currency": "मुद्रा परिवर्तक",
+  "pig_latin": {
+    "link_text": "पिग लैटिन अनुवादक",
+    "page_title": "पिग लैटिन अनुवादक",
+    "input_label": "अनुवाद करने के लिए टेक्स्ट दर्ज करें",
+    "output_label": "पिग लैटिन",
+    "tool_title": "पिग लैटिन अनुवादक"
+  },
+  "markdown_preview": {
+    "link_text": "मार्कडाउन पूर्वावलोकन",
+    "page_title": "मार्कडाउन पूर्वावलोकन",
+    "page_description": "अपने मार्कडाउन टेक्स्ट को वास्तविक समय में पूर्वावलोकन करें।",
+    "tool_title": "मार्कडाउन पूर्वावलोकन",
+    "input_label": "यहाँ अपना मार्कडाउन टेक्स्ट दर्ज करें"
+  },
+  "text_statistics": {
+    "link_text": "टेक्स्ट स्टेटिस्टिक्स",
+    "page_title": "टेक्स्ट स्टेटिस्टिक्स",
+    "page_description": "अपने टेक्स्ट के बारे में स्टेटिस्टिक्स प्राप्त करें।",
+    "tool_title": "टेक्स्ट स्टेटिस्टिक्स",
+    "input_label": "यहाँ अपना टेक्स्ट दर्ज करें",
+    "character_count": "वर्णों की संख्या",
+    "word_count": "शब्दों की संख्या",
+    "sentence_count": "वाक्यों की संख्या",
+    "reading_time": "पढ़ने का समय (लगभग)",
+    "tool": "उपकरण"
   }
-  
+}
