--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -1,37 +1,53 @@
 {
-    "page_title": "ページタイトル",
-    "sign_in": "サインイン",
-    "sign_up": "サインアップ",
-    "encryption": "暗号化",
-    "decryption": "復号化",
-    "encoding": "エンコード",
-    "hashing": "ハッシュ",
-    "compression": "圧縮",
-    "keygen": "鍵生成",
-    "home": "ホーム",
-    "page.title.home": "TxtWizard - 無料オンラインツール - 暗号化、ハッシュ、圧縮、イーサリアム鍵生成",
-    "page.description.home": "TxtWizard は、暗号化、復号化、ハッシュ、圧縮、イーサリアム鍵生成などの無料オンラインツールを提供します。",
-    "welcome-to-txtwizard": "TxtWizardへようこそ！",
-    "txtwizard-intro": "TxtWizardは、強力で安全なオンラインツールのプラットフォームです。すべてがブラウザ内で動作します。以下の機能をご覧ください。",
-    "our-tools": "ツール",
-    "tool": "ツール",
-    "decoding": "デコード",
-    "encryption-intro": "AES-GCM または AES-CBC を使用して、機密データを簡単に暗号化します。",
-    "decryption-intro": "AESで暗号化されたデータを元の形式に復号化します。AES-GCMおよびAES-CBCに対応しています。",
-    "hashing-intro": "MD5、SHA1、SHA256 などの暗号ハッシュを作成し、データの整合性を確認できます。",
-    "compression-intro": "Gzip、Bzip2、Deflateを使用してテキストを圧縮します。",
-    "keygen-intro": "ブラウザで直接ビットコインおよびイーサリアムの公開鍵と秘密鍵を生成します。",
-    "encoding-intro": "Base64、Hex、URL、およびHTMLエンコード形式間でテキストを変換します。",
-    "bitcoin": "ビットコイン",
-    "ethereum": "イーサリアム",
-    "generate": "生成",
-    "encrypt-button": "暗号化",
-    "decrypt-button": "復号化",
-    "hash-button": "ハッシュ",
-    "compress-button": "圧縮",
-    "qr-code-gen": "QRコード生成",
-    "qr-code-intro": "QRコードは、テキスト、URL、またはその他のデータをエンコードできます。",
-    "currency": "通貨変換",
-    "currency-intro": "リアルタイムの為替レートを使用して通貨間の変換を行います。"
+  "page_title": "ページタイトル",
+  "sign_in": "サインイン",
+  "sign_up": "サインアップ",
+  "encryption": "暗号化",
+  "decryption": "復号化",
+  "encoding": "エンコード",
+  "hashing": "ハッシュ",
+  "compression": "圧縮",
+  "keygen": "鍵生成",
+  "home": "ホーム",
+  "page.title.home": "TxtWizard - 無料オンラインツール - 暗号化、ハッシュ、圧縮、イーサリアム鍵生成",
+  "page.description.home": "TxtWizard は、暗号化、復号化、ハッシュ、圧縮、イーサリアム鍵生成などの無料オンラインツールを提供します。",
+  "welcome-to-txtwizard": "TxtWizardへようこそ！",
+  "txtwizard-intro": "TxtWizardは、強力で安全なオンラインツールのプラットフォームです。すべてがブラウザ内で動作します。以下の機能をご覧ください。",
+  "our-tools": "ツール",
+  "tool": "ツール",
+  "decoding": "デコード",
+  "encryption-intro": "AES-GCM または AES-CBC を使用して、機密データを簡単に暗号化します。",
+  "decryption-intro": "AESで暗号化されたデータを元の形式に復号化します。AES-GCMおよびAES-CBCに対応しています。",
+  "hashing-intro": "MD5、SHA1、SHA256 などの暗号ハッシュを作成し、データの整合性を確認できます。",
+  "compression-intro": "Gzip、Bzip2、Deflateを使用してテキストを圧縮します。",
+  "keygen-intro": "ブラウザで直接ビットコインおよびイーサリアムの公開鍵と秘密鍵を生成します。",
+  "encoding-intro": "Base64、Hex、URL、HTML エンコーディング形式の間で変換を行います。",
+  "qr-code-gen": "QR コードジェネレーター",
+  "currency": "通貨コンバーター",
+  "pig_latin": {
+    "link_text": "ピッグ・ラテン語翻訳",
+    "page_title": "ピッグ・ラテン語翻訳",
+    "input_label": "翻訳するテキストを入力してください",
+    "output_label": "ピッグ・ラテン語",
+    "tool_title": "ピッグ・ラテン語翻訳"
+  },
+  "markdown_preview": {
+    "link_text": "Markdown プレビュー",
+    "page_title": "Markdown プレビュー",
+    "page_description": "Markdown テキストをリアルタイムでプレビューします。",
+    "tool_title": "Markdown プレビュー",
+    "input_label": "ここに Markdown テキストを入力してください"
+  },
+  "text_statistics": {
+    "link_text": "テキスト統計",
+    "page_title": "テキスト統計",
+    "page_description": "テキストに関する統計情報を取得します。",
+    "tool_title": "テキスト統計",
+    "input_label": "ここにテキストを入力してください",
+    "character_count": "文字数",
+    "word_count": "単語数",
+    "sentence_count": "文数",
+    "reading_time": "読書時間（概算）",
+    "tool": "ツール"
   }
-  
+}
