--- a/src/lib/i18n/locales/nl.json
+++ b/src/lib/i18n/locales/nl.json
@@ -1,37 +1,53 @@
 {
-    "page_title": "Paginatitel",
-    "sign_in": "Inloggen",
-    "sign_up": "Aanmelden",
-    "encryption": "Versleuteling",
-    "decryption": "Ontsleuteling",
-    "encoding": "Codering",
-    "hashing": "Hashing",
-    "compression": "Compressie",
-    "keygen": "Sleutelaanmaak",
-    "home": "Startpagina",
-    "page.title.home": "TxtWizard - Gratis online tools - Versleuteling, Hashing, Compressie, Ethereum Sleutelaanmaak",
-    "page.description.home": "TxtWizard biedt gratis online tools voor tekstversleuteling, ontsleuteling, hashing, compressie, Ethereum sleutelaanmaak en meer.",
-    "welcome-to-txtwizard": "Welkom bij TxtWizard!",
-    "txtwizard-intro": "TxtWizard is een platform voor krachtige en veilige online tools, die volledig in uw browser werken. Ontdek onze functies:",
-    "our-tools": "Onze tools",
-    "tool": "Tool",
-    "decoding": "Decodering",
-    "encryption-intro": "Versleutel eenvoudig gevoelige gegevens met AES-GCM of AES-CBC.",
-    "decryption-intro": "Ontsleutel AES-versleutelde gegevens naar hun oorspronkelijke formaat. Ondersteunt AES-GCM en AES-CBC.",
-    "hashing-intro": "Maak cryptografische hashes zoals MD5, SHA1, SHA256 en meer.",
-    "compression-intro": "Comprimeer tekst met Gzip, Bzip2 en Deflate.",
-    "keygen-intro": "Genereer Bitcoin- en Ethereum-sleutels direct in uw browser.",
-    "encoding-intro": "Converteer tekst tussen Base64, Hex, URL en HTML coderingsformaten.",
-    "bitcoin": "Bitcoin",
-    "ethereum": "Ethereum",
-    "generate": "Genereren",
-    "encrypt-button": "Versleutel",
-    "decrypt-button": "Ontsleutel",
-    "hash-button": "Hashen",
-    "compress-button": "Comprimeer",
-    "qr-code-gen": "QR-code generatie",
-    "qr-code-intro": "Een QR-code kan tekst, URL's of andere gegevens coderen en wordt veel gebruikt voor contactloze betalingen, websitelinks, enz.",
-    "currency": "Valutaconversie",
-    "currency-intro": "Valutaconversies met actuele wisselkoersinformatie."
+  "page_title": "Paginatitel",
+  "sign_in": "Inloggen",
+  "sign_up": "Aanmelden",
+  "encryption": "Versleuteling",
+  "decryption": "Ontsleuteling",
+  "encoding": "Codering",
+  "hashing": "Hashing",
+  "compression": "Compressie",
+  "keygen": "Sleutelaanmaak",
+  "home": "Startpagina",
+  "page.title.home": "TxtWizard - Gratis online tools - Versleuteling, Hashing, Compressie, Ethereum Sleutelaanmaak",
+  "page.description.home": "TxtWizard biedt gratis online tools voor tekstversleuteling, ontsleuteling, hashing, compressie, Ethereum sleutelaanmaak en meer.",
+  "welcome-to-txtwizard": "Welkom bij TxtWizard!",
+  "txtwizard-intro": "TxtWizard is een platform voor krachtige en veilige online tools, die volledig in uw browser werken. Ontdek onze functies:",
+  "our-tools": "Onze tools",
+  "tool": "Tool",
+  "decoding": "Decodering",
+  "encryption-intro": "Versleutel eenvoudig gevoelige gegevens met AES-GCM of AES-CBC.",
+  "decryption-intro": "Ontsleutel AES-gecodeerde gegevens terug naar hun oorspronkelijke vorm",
+  "hashing-intro": "Genereer cryptografische hashes zoals MD5, SHA1, SHA256, etc.",
+  "compression-intro": "Comprimeer tekst met behulp van Gzip, Bzip2, Deflate.",
+  "keygen-intro": "Genereer Bitcoin- en Ethereum-sleutelparen rechtstreeks in uw browser.",
+  "encoding-intro": "Converteer tussen Base64-, Hex-, URL- en HTML-coderingsformaten.",
+  "qr-code-gen": "QR-codegenerator",
+  "currency": "Valuta omzetter",
+  "pig_latin": {
+    "link_text": "Varkenslatijnvertaler",
+    "page_title": "Varkenslatijnvertaler",
+    "input_label": "Voer tekst in om te vertalen",
+    "output_label": "Varkenslatijn",
+    "tool_title": "Varkenslatijnvertaler"
+  },
+  "markdown_preview": {
+    "link_text": "Markdownvoorbeeld",
+    "page_title": "Markdownvoorbeeld",
+    "page_description": "Bekijk een voorbeeld van uw markdowntekst in realtime.",
+    "tool_title": "Markdownvoorbeeld",
+    "input_label": "Voer hier uw Markdown-tekst in"
+  },
+  "text_statistics": {
+    "link_text": "Tekststatistieken",
+    "page_title": "Tekststatistieken",
+    "page_description": "Krijg statistieken over uw tekst.",
+    "tool_title": "Tekststatistieken",
+    "input_label": "Voer hier uw tekst in",
+    "character_count": "Aantal tekens",
+    "word_count": "Aantal woorden",
+    "sentence_count": "Aantal zinnen",
+    "reading_time": "Leestijd (ongeveer)",
+    "tool": "Tool"
   }
-  
+}
