feat: Add text summarization to navigation

--- a/src/lib/i18n/locales/de.json
+++ b/src/lib/i18n/locales/de.json
@@ -1,37 +1,35 @@
 {
-    "page_title": "Seitentitel",
-    "sign_in": "Anmelden",
-    "sign_up": "Registrieren",
-    "encryption": "Verschlüsselung",
-    "decryption": "Entschlüsselung",
-    "encoding": "Kodierung",
-    "hashing": "Hashing",
-    "compression": "Kompression",
-    "keygen": "Schlüsselgenerierung",
-    "home": "Startseite",
-    "page.title.home": "TxtWizard - Kostenlose Online-Tools - Verschlüsselung, Hashing, Kompression, Ethereum Schlüsselgenerierung",
-    "page.description.home": "TxtWizard bietet kostenlose Online-Tools für Textverschlüsselung, Entschlüsselung, Hashing, Kompression, Ethereum Schlüsselgenerierung und mehr.",
-    "welcome-to-txtwizard": "Willkommen bei TxtWizard!",
-    "txtwizard-intro": "TxtWizard ist eine Plattform für leistungsstarke und sichere Online-Tools, die vollständig in Ihrem Browser ausgeführt werden. Entdecken Sie unsere Funktionen:",
-    "our-tools": "Unsere Werkzeuge",
-    "tool": "Werkzeug",
-    "decoding": "Dekodierung",
-    "encryption-intro": "Verschlüsseln Sie sensible Daten einfach mit AES-GCM oder AES-CBC.",
-    "decryption-intro": "Entschlüsseln Sie AES-verschlüsselte Daten zurück in ihr ursprüngliches Format. Unterstützt AES-GCM und AES-CBC.",
-    "hashing-intro": "Erstellen Sie kryptografische Hashes wie MD5, SHA1, SHA256 und mehr.",
-    "compression-intro": "Komprimieren Sie Text mit Gzip, Bzip2 und Deflate.",
-    "keygen-intro": "Generieren Sie Bitcoin- und Ethereum-Schlüsselpaare direkt in Ihrem Browser.",
-    "encoding-intro": "Konvertieren Sie Text zwischen Base64, Hex, URL und HTML Kodierungsformaten.",
-    "bitcoin": "Bitcoin",
-    "ethereum": "Ethereum",
-    "generate": "Generieren",
-    "encrypt-button": "Verschlüsseln",
-    "decrypt-button": "Entschlüsseln",
-    "hash-button": "Hashen",
-    "compress-button": "Komprimieren",
-    "qr-code-gen": "QR-Code-Generierung",
-    "qr-code-intro": "Ein QR-Code kann Text, URLs oder andere Daten codieren und wird häufig für kontaktloses Bezahlen und Webseitenlinks verwendet.",
-    "currency": "Währungsumrechnung",
-    "currency-intro": "Währungsumrechnungen mit Echtzeit-Wechselkursinformationen."
+  "page_title": "Seitentitel",
+  "sign_in": "Anmelden",
+  "sign_up": "Registrieren",
+  "encryption": "Verschlüsselung",
+  "decryption": "Entschlüsselung",
+  "encoding": "Kodierung",
+  "hashing": "Hashing",
+  "compression": "Kompression",
+  "keygen": "Schlüsselgenerierung",
+  "home": "Startseite",
+  "page.title.home": "TxtWizard - Kostenlose Online-Tools - Verschlüsselung, Hashing, Kompression, Ethereum Schlüsselgenerierung",
+  "page.description.home": "TxtWizard bietet kostenlose Online-Tools für Textverschlüsselung, Entschlüsselung, Hashing, Kompression, Ethereum Schlüsselgenerierung und mehr.",
+  "welcome-to-txtwizard": "Willkommen bei TxtWizard!",
+  "txtwizard-intro": "TxtWizard ist eine Plattform für leistungsstarke und sichere Online-Tools, die vollständig in Ihrem Browser ausgeführt werden. Entdecken Sie unsere Funktionen:",
+  "our-tools": "Unsere Werkzeuge",
+  "tool": "Werkzeug",
+  "decoding": "Dekodierung",
+  "encryption-intro": "Verschlüsseln Sie einfach vertrauliche Daten mit AES-GCM oder AES-CBC.",
+  "decryption-intro": "Entschlüsseln Sie AES-verschlüsselte Daten wieder in ihr ursprüngliches Format. Unterstützt AES-GCM und AES-CBC.",
+  "hashing-intro": "Erstellen Sie kryptografische Hashes wie MD5, SHA1, SHA256 zur Überprüfung der Datenintegrität.",
+  "compression-intro": "Komprimieren Sie Text mit Gzip, Bzip2 und Deflate.",
+  "keygen-intro": "Generieren Sie Bitcoin- und Ethereum-Schlüsselpaare direkt in Ihrem Browser.",
+  "encoding-intro": "Konvertieren Sie Klartext zwischen Base64-, Hex-, URL- und HTML-Codierungsformaten.",
+  "qr-code-gen": "QR-Code-Generator",
+  "currency": "Währungsumrechner",
+  "text-summarization": {
+    "title": "Textzusammenfassung",
+    "description": "Fassen Sie Ihren Text zusammen.",
+    "enter_text": "Bitte geben Sie Text zum Zusammenfassen ein.",
+    "sentence_count": "Anzahl der Sätze in der Zusammenfassung:",
+    "summarize": "Zusammenfassen",
+    "summary": "Zusammenfassung:"
   }
-  
+}
