--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -17,20 +17,19 @@
   "tool": "Tool",
   "decoding": "Decoding",
   "encryption-intro": "Easily encrypt sensitive data using AES-GCM or AES-CBC.",
-  "decryption-intro": "Decrypt AES-encrypted data back to its original form. Supports AES-GCM and AES-CBC.",
-  "hashing-intro": "Create cryptographic hashes like MD5, SHA1, SHA256, and more. Generate secure hashes for data integrity verification.",
-  "compression-intro": "Compress text using Gzip, Bzip2, and Deflate. Measure compression ratio and easily obtain compressed results.",
-  "keygen-intro": "Generate Bitcoin and Ethereum public and private key pairs with a secure local process, right in your browser.",
+  "decryption-intro": "Decrypt AES-encrypted data back to its original",
+  "hashing-intro": "Create cryptographic hashes such as MD5, SHA1, SHA256 for data integrity verification.",
+  "compression-intro": "Compress text using Gzip, Bzip2, and Deflate.",
+  "keygen-intro": "Generate Bitcoin and Ethereum public/private key pairs directly in your browser.",
   "encoding-intro": "Convert plain text between Base64, Hex, URL, and HTML encoding formats.",
-  "bitcoin": "Bitcoin",
-  "ethereum": "Ethereum",
-  "generate": "Generate",
-  "encrypt-button": "ENCRYPT",
-  "decrypt-button": "DECRYPT",
-  "hash-button": "Hash",
-  "compress-button": "Compress",
-  "qr-code-gen": "QR code generation",
-  "qr-code-intro": "A QR code (Quick Response code) is a type of matrix barcode that can encode information such as text, URLs, or other data. It's widely used for contactless payment systems, website links, and more.",
-  "currency": "Currency Conversion",
-  "currency-intro": "Currency to currency conversions using real-time, up-to-date exchange rate information."
+  "qr-code-gen": "QR Code Generator",
+  "currency": "Currency Converter",
+  "text-summarization": {
+    "title": "Text Summarization",
+    "description": "Summarize your text.",
+    "enter_text": "Please enter text to summarize.",
+    "sentence_count": "Number of sentences in summary:",
+    "summarize": "Summarize",
+    "summary": "Summary:"
+  }
 }
