--- a/src/lib/i18n/locales/es.json
+++ b/src/lib/i18n/locales/es.json
@@ -1,37 +1,35 @@
 {
-    "page_title": "Título de la página",
-    "sign_in": "Iniciar sesión",
-    "sign_up": "Registrarse",
-    "encryption": "Encriptación",
-    "decryption": "Desencriptación",
-    "encoding": "Codificación",
-    "hashing": "Hashing",
-    "compression": "Compresión",
-    "keygen": "Generación de clave",
-    "home": "Inicio",
-    "page.title.home": "TxtWizard - Herramientas en línea gratuitas - Encriptación, Hashing, Compresión, Generación de claves de Ethereum",
-    "page.description.home": "TxtWizard ofrece herramientas en línea gratuitas para encriptación, desencriptación, hashing, compresión, generación de claves de Ethereum y más.",
-    "welcome-to-txtwizard": "¡Bienvenido a TxtWizard!",
-    "txtwizard-intro": "TxtWizard es una plataforma para herramientas en línea potentes y seguras, que funcionan completamente en su navegador. Explore nuestras características:",
-    "our-tools": "Nuestras herramientas",
-    "tool": "Herramienta",
-    "decoding": "Decodificación",
-    "encryption-intro": "Encripte datos sensibles fácilmente usando AES-GCM o AES-CBC.",
-    "decryption-intro": "Desencripte datos encriptados con AES a su formato original. Compatible con AES-GCM y AES-CBC.",
-    "hashing-intro": "Cree hashes criptográficos como MD5, SHA1, SHA256 y más.",
-    "compression-intro": "Comprima texto con Gzip, Bzip2 y Deflate.",
-    "keygen-intro": "Genere pares de claves públicas y privadas de Bitcoin y Ethereum directamente en su navegador.",
-    "encoding-intro": "Convierta texto entre formatos de codificación como Base64, Hex, URL y HTML.",
-    "bitcoin": "Bitcoin",
-    "ethereum": "Ethereum",
-    "generate": "Generar",
-    "encrypt-button": "ENCRIPTAR",
-    "decrypt-button": "DESENCRIPTAR",
-    "hash-button": "Hashear",
-    "compress-button": "Comprimir",
-    "qr-code-gen": "Generación de código QR",
-    "qr-code-intro": "Un código QR puede codificar información como texto, URLs u otros datos, y se usa ampliamente para pagos sin contacto, enlaces de sitios web, etc.",
-    "currency": "Conversión de divisas",
-    "currency-intro": "Conversión de divisas usando información de tasas de cambio en tiempo real."
+  "page_title": "Título de la página",
+  "sign_in": "Iniciar sesión",
+  "sign_up": "Registrarse",
+  "encryption": "Encriptación",
+  "decryption": "Desencriptación",
+  "encoding": "Codificación",
+  "hashing": "Hashing",
+  "compression": "Compresión",
+  "keygen": "Generación de clave",
+  "home": "Inicio",
+  "page.title.home": "TxtWizard - Herramientas en línea gratuitas - Encriptación, Hashing, Compresión, Generación de claves de Ethereum",
+  "page.description.home": "TxtWizard ofrece herramientas en línea gratuitas para encriptación, desencriptación, hashing, compresión, generación de claves de Ethereum y más.",
+  "welcome-to-txtwizard": "¡Bienvenido a TxtWizard!",
+  "txtwizard-intro": "TxtWizard es una plataforma para herramientas en línea potentes y seguras, que funcionan completamente en su navegador. Explore nuestras características:",
+  "our-tools": "Nuestras herramientas",
+  "tool": "Herramienta",
+  "decoding": "Decodificación",
+  "encryption-intro": "Encripta fácilmente datos confidenciales utilizando AES-GCM o AES-CBC.",
+  "decryption-intro": "Desencripta datos encriptados con AES a su formato original. Compatible con AES-GCM y AES-CBC.",
+  "hashing-intro": "Crea hashes criptográficos como MD5, SHA1, SHA256 para la verificación de la integridad de los datos.",
+  "compression-intro": "Comprime texto usando Gzip, Bzip2 y Deflate.",
+  "keygen-intro": "Genera pares de claves públicas/privadas de Bitcoin y Ethereum directamente en tu navegador.",
+  "encoding-intro": "Convierte texto plano entre formatos de codificación Base64, Hexadecimal, URL y HTML.",
+  "qr-code-gen": "Generador de códigos QR",
+  "currency": "Convertidor de divisas",
+  "text-summarization": {
+    "title": "Resumen de texto",
+    "description": "Resume tu texto.",
+    "enter_text": "Por favor, ingrese el texto a resumir.",
+    "sentence_count": "Número de frases en el resumen:",
+    "summarize": "Resumir",
+    "summary": "Resumen:"
   }
-  
+}
