--- a/src/lib/i18n/locales/ko.json
+++ b/src/lib/i18n/locales/ko.json
@@ -20,17 +20,15 @@
   "decryption-intro": "AES로 암호화된 데이터를 원래 형식으로 복호화합니다. AES-GCM 및 AES-CBC를 지원합니다.",
   "hashing-intro": "MD5, SHA1, SHA256 등의 암호화 해시를 생성하세요. 데이터 무결성 검증을 위한 보안 해시를 생성하세요.",
   "compression-intro": "Gzip, Bzip2, 압축해제를 사용하여 텍스트를 압축합니다. 압축률을 측정하고 압축된 결과를 쉽게 얻을 수 있습니다.",
-  "keygen-intro": "브라우저에서 바로 안전한 로컬 프로세스로 비트코인 및 이더리움           공개 및 개인 키 쌍을 안전한 로컬 프로세스를 통해 브라우저에서 바로 생성할 수 있습니다.",
-  "encoding-intro": "Base64, Hex, URL 및 HTML 인코딩 형식 간에 일반 텍스트를 변환합니다.",
-  "bitcoin": "비트코인",
-  "ethereum": "이더리움",
-  "generate": "생성",
-  "encrypt-button": "암호화 하기",
-  "decrypt-button": "복호화 하기",
-  "hash-button": "해시 하기",
-  "compress-button": "압축하기",
-  "qr-code-intro": "QR 코드(빠른 응답 코드)는 텍스트, URL 또는 기타 데이터와 같은 정보를 인코딩할 수 있는 매트릭스 바코드 유형입니다. \n비접촉 결제 시스템, 웹사이트 링크 등에 널리 사용됩니다.",
-  "qr-code-gen": "QR 코드 생성",
-  "currency": "환율 계산",
-  "currency-intro": "실시간 최신 환율 정보를 사용하여 화폐 간의 환율을 계산합니다."
+  "keygen-intro": "브라우저에서 바로 안전한 로컬 프로세스로 비트코인",
+  "qr-code-gen": "QR 코드 생성기",
+  "currency": "환율 계산기",
+  "text-summarization": {
+    "title": "텍스트 요약",
+    "description": "텍스트를 요약합니다.",
+    "enter_text": "요약할 텍스트를 입력하세요.",
+    "sentence_count": "요약 문장 수:",
+    "summarize": "요약",
+    "summary": "요약:"
+  }
 }
