--- a/src/lib/i18n/locales/pl.json
+++ b/src/lib/i18n/locales/pl.json
@@ -1,37 +1,35 @@
 {
-    "page_title": "Tytuł strony",
-    "sign_in": "Zaloguj się",
-    "sign_up": "Zarejestruj się",
-    "encryption": "Szyfrowanie",
-    "decryption": "Deszyfrowanie",
-    "encoding": "Kodowanie",
-    "hashing": "Haszowanie",
-    "compression": "Kompresja",
-    "keygen": "Generowanie kluczy",
-    "home": "Strona główna",
-    "page.title.home": "TxtWizard - Darmowe narzędzia online - Szyfrowanie, Haszowanie, Kompresja, Generowanie kluczy Ethereum",
-    "page.description.home": "TxtWizard oferuje darmowe narzędzia online do szyfrowania, deszyfrowania, haszowania, kompresji, generowania kluczy Ethereum i więcej.",
-    "welcome-to-txtwizard": "Witamy w TxtWizard!",
-    "txtwizard-intro": "TxtWizard to platforma dla potężnych i bezpiecznych narzędzi online, działających bezpośrednio w przeglądarce. Odkryj nasze funkcje:",
-    "our-tools": "Nasze narzędzia",
-    "tool": "Narzędzie",
-    "decoding": "Dekodowanie",
-    "encryption-intro": "Łatwo zaszyfruj wrażliwe dane za pomocą AES-GCM lub AES-CBC.",
-    "decryption-intro": "Deszyfruj dane zaszyfrowane przy użyciu AES do ich pierwotnego formatu.",
-    "hashing-intro": "Twórz hasze kryptograficzne, takie jak MD5, SHA1, SHA256 i inne.",
-    "compression-intro": "Kompresuj tekst za pomocą Gzip, Bzip2 i Deflate.",
-    "keygen-intro": "Generuj pary kluczy publicznych i prywatnych Bitcoin i Ethereum bezpośrednio w przeglądarce.",
-    "encoding-intro": "Konwertuj tekst pomiędzy formatami kodowania Base64, Hex, URL i HTML.",
-    "bitcoin": "Bitcoin",
-    "ethereum": "Ethereum",
-    "generate": "Generuj",
-    "encrypt-button": "Zaszyfruj",
-    "decrypt-button": "Odszyfruj",
-    "hash-button": "Haszuj",
-    "compress-button": "Kompresuj",
-    "qr-code-gen": "Generowanie kodu QR",
-    "qr-code-intro": "Kod QR może kodować informacje, takie jak tekst, URL i inne dane, szeroko stosowany w płatnościach bezdotykowych.",
-    "currency": "Konwersja walut",
-    "currency-intro": "Konwersje walut z wykorzystaniem aktualnych kursów wymiany."
+  "page_title": "Tytuł strony",
+  "sign_in": "Zaloguj się",
+  "sign_up": "Zarejestruj się",
+  "encryption": "Szyfrowanie",
+  "decryption": "Deszyfrowanie",
+  "encoding": "Kodowanie",
+  "hashing": "Haszowanie",
+  "compression": "Kompresja",
+  "keygen": "Generowanie kluczy",
+  "home": "Strona główna",
+  "page.title.home": "TxtWizard - Darmowe narzędzia online - Szyfrowanie, Haszowanie, Kompresja, Generowanie kluczy Ethereum",
+  "page.description.home": "TxtWizard oferuje darmowe narzędzia online do szyfrowania, deszyfrowania, haszowania, kompresji, generowania kluczy Ethereum i więcej.",
+  "welcome-to-txtwizard": "Witamy w TxtWizard!",
+  "txtwizard-intro": "TxtWizard to platforma dla potężnych i bezpiecznych narzędzi online, działających bezpośrednio w przeglądarce. Odkryj nasze funkcje:",
+  "our-tools": "Nasze narzędzia",
+  "tool": "Narzędzie",
+  "decoding": "Dekodowanie",
+  "encryption-intro": "Łatwo zaszyfruj wrażliwe dane za pomocą AES-GCM lub AES-CBC.",
+  "decryption-intro": "Odszyfruj dane zaszyfrowane za pomocą AES z powrotem do ich pierwotnego formatu. Obsługuje AES-GCM i AES-CBC.",
+  "hashing-intro": "Twórz hasze kryptograficzne, takie jak MD5, SHA1, SHA256 do weryfikacji integralności danych.",
+  "compression-intro": "Kompresuj tekst za pomocą Gzip, Bzip2 i Deflate.",
+  "keygen-intro": "Generuj pary kluczy publicznych/prywatnych Bitcoin i Ethereum bezpośrednio w przeglądarce.",
+  "encoding-intro": "Konwertuj zwykły tekst między formatami kodowania Base64, Hex, URL i HTML.",
+  "qr-code-gen": "Generator kodów QR",
+  "currency": "Przelicznik walut",
+  "text-summarization": {
+    "title": "Podsumowanie tekstu",
+    "description": "Podsumuj swój tekst.",
+    "enter_text": "Wprowadź tekst do podsumowania.",
+    "sentence_count": "Liczba zdań w podsumowaniu:",
+    "summarize": "Podsumuj",
+    "summary": "Podsumowanie:"
   }
-  
+}
