--- a/src/lib/i18n/locales/ru.json
+++ b/src/lib/i18n/locales/ru.json
@@ -1,37 +1,35 @@
 {
-    "page_title": "Название страницы",
-    "sign_in": "Войти",
-    "sign_up": "Зарегистрироваться",
-    "encryption": "Шифрование",
-    "decryption": "Дешифрование",
-    "encoding": "Кодирование",
-    "hashing": "Хеширование",
-    "compression": "Сжатие",
-    "keygen": "Генерация ключей",
-    "home": "Главная",
-    "page.title.home": "TxtWizard - Бесплатные онлайн-инструменты - шифрование, хеширование, сжатие, генерация ключей Ethereum",
-    "page.description.home": "TxtWizard предлагает бесплатные онлайн-инструменты для шифрования, дешифрования, хеширования, сжатия, генерации ключей Ethereum и других функций.",
-    "welcome-to-txtwizard": "Добро пожаловать в TxtWizard!",
-    "txtwizard-intro": "TxtWizard - это платформа для мощных и безопасных онлайн-инструментов, работающих прямо в браузере. Исследуйте наши функции:",
-    "our-tools": "Наши инструменты",
-    "tool": "Инструмент",
-    "decoding": "Декодирование",
-    "encryption-intro": "Шифруйте данные с использованием AES-GCM или AES-CBC.",
-    "decryption-intro": "Дешифруйте данные, зашифрованные AES, обратно в исходный формат.",
-    "hashing-intro": "Создавайте криптографические хеши, такие как MD5, SHA1, SHA256.",
-    "compression-intro": "Сжимайте текст с помощью Gzip, Bzip2 и Deflate.",
-    "keygen-intro": "Генерируйте пары публичных и приватных ключей Bitcoin и Ethereum прямо в браузере.",
-    "encoding-intro": "Конвертируйте текст между форматами Base64, Hex, URL и HTML.",
-    "bitcoin": "Биткойн",
-    "ethereum": "Эфириум",
-    "generate": "Сгенерировать",
-    "encrypt-button": "ШИФРОВАТЬ",
-    "decrypt-button": "ДЕШИФРОВАТЬ",
-    "hash-button": "Хеш",
-    "compress-button": "Сжать",
-    "qr-code-gen": "Генерация QR-кода",
-    "qr-code-intro": "QR-код может кодировать текст, URL и другие данные.",
-    "currency": "Конвертация валюты",
-    "currency-intro": "Конвертация валют с использованием актуальных курсов."
+  "page_title": "Название страницы",
+  "sign_in": "Войти",
+  "sign_up": "Зарегистрироваться",
+  "encryption": "Шифрование",
+  "decryption": "Дешифрование",
+  "encoding": "Кодирование",
+  "hashing": "Хеширование",
+  "compression": "Сжатие",
+  "keygen": "Генерация ключей",
+  "home": "Главная",
+  "page.title.home": "TxtWizard - Бесплатные онлайн-инструменты - шифрование, хеширование, сжатие, генерация ключей Ethereum",
+  "page.description.home": "TxtWizard предлагает бесплатные онлайн-инструменты для шифрования, дешифрования, хеширования, сжатия, генерации ключей Ethereum и других функций.",
+  "welcome-to-txtwizard": "Добро пожаловать в TxtWizard!",
+  "txtwizard-intro": "TxtWizard - это платформа для мощных и безопасных онлайн-инструментов, работающих прямо в браузере. Исследуйте наши функции:",
+  "our-tools": "Наши инструменты",
+  "tool": "Инструмент",
+  "decoding": "Декодирование",
+  "encryption-intro": "Шифруйте данные с использованием AES-GCM или AES-CBC.",
+  "decryption-intro": "Расшифровывайте данные, зашифрованные AES, в их исходный формат. Поддерживает AES-GCM и AES-CBC.",
+  "hashing-intro": "Создавайте криптографические хеши, такие как MD5, SHA1, SHA256, для проверки целостности данных.",
+  "compression-intro": "Сжимайте текст с помощью Gzip, Bzip2 и Deflate.",
+  "keygen-intro": "Создавайте пары открытых/закрытых ключей Bitcoin и Ethereum прямо в вашем браузере.",
+  "encoding-intro": "Преобразуйте обычный текст между форматами кодирования Base64, Hex, URL и HTML.",
+  "qr-code-gen": "Генератор QR-кодов",
+  "currency": "Конвертер валют",
+  "text-summarization": {
+    "title": "Сводка текста",
+    "description": "Составьте сводку вашего текста.",
+    "enter_text": "Пожалуйста, введите текст для сводки.",
+    "sentence_count": "Количество предложений в сводке:",
+    "summarize": "Составить сводку",
+    "summary": "Сводка:"
   }
-  
+}
