--- a/src/lib/i18n/locales/es.json
+++ b/src/lib/i18n/locales/es.json
@@ -82,5 +82,6 @@
     "calculate_new_date": "Calcular nueva fecha",
     "calculated_date_is": "La fecha calculada es",
     "code-minifier": "Minificador de Código",
+    "code-minifier-intro": "Minifique su código para reducir el tamaño del archivo y mejorar los tiempos de carga. Soporta JavaScript, CSS y HTML.",
     "minify-button": "Minificar"
 }
