--- a/src/lib/i18n/locales/ko.json
+++ b/src/lib/i18n/locales/ko.json
@@ -82,5 +82,6 @@
     "calculate_new_date": "새 날짜 계산",
     "calculated_date_is": "계산된 날짜는",
     "code-minifier": "코드 축소기",
+    "code-minifier-intro": "파일 크기를 줄이고 로드 시간을 개선하기 위해 코드를 축소하세요. JavaScript, CSS 및 HTML을 지원합니다.",
     "minify-button": "축소하기"
 }
